Stable build with tests and JaCoCo coverage

--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
     <artifactId>jacoco-maven-plugin</artifactId>
     <version>0.8.12</version>
     <executions>
-        <!-- 1️⃣ Attach JaCoCo agent to test phase -->
+        <!-- Attach JaCoCo agent to test phase -->
         <execution>
             <id>prepare-agent</id>
             <goals>
@@ -69,23 +69,17 @@
             </goals>
         </execution>
 
-        <!-- 2️⃣ Generate the XML/HTML report after tests -->
+        <!-- Generate HTML + XML reports after tests -->
         <execution>
             <id>report</id>
-            <phase>verify</phase> <!-- runs after 'test' and before 'install' -->
+            <phase>verify</phase>
             <goals>
                 <goal>report</goal>
             </goals>
-            <configuration>
-                <!-- Explicitly enable XML output -->
-                <reports>
-                    <report>xml</report>
-                    <report>html</report>
-                </reports>
-            </configuration>
         </execution>
     </executions>
 </plugin>
+
 
       <!-- Create runnable JAR -->
       <plugin>
